auth done, api work well, contract api need to do